# shlib

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/3d_cube/: CMakeLists.txt  main.c
examples/3d_space/: CMakeLists.txt  main.c
examples/batch_rendering/: CMakeLists.txt  main.c
examples/blank_window/: CMakeLists.txt  main.c
examples/depth_buffer/: CMakeLists.txt  main.c
examples/first_quad/: CMakeLists.txt  main.c
examples/model_loading/: CMakeLists.txt  main.c
examples/text_rendering/: CMakeLists.txt  main.c
include/shlib/: shlib.h  shlib_math.h
libs/assimp/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: shlib_core.c  shlib_internal.h  shlib_math.c  shlib_math.h  shlib_utils.c
